--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -6,10 +6,15 @@
 .review {
   border: 1px solid white;
   border-radius: 5px;
-  padding: 0.5em 1em;
-  margin: 0 1em 1em;
+  padding: 1em 1em;
+  margin: 1em 0 0;
 }
 
 .author {
   font-weight: 700;
+}
+
+.content {
+  font-size: 0.9em;
+  margin-top: 0.25em;
 }
