--- a/src/components/ReviewSummary.module.css
+++ b/src/components/ReviewSummary.module.css
@@ -4,7 +4,7 @@
   justify-content: flex-end;
   align-items: center;
   font-size: 0.75em;
-  padding-right: 1em;
+  /* padding-right: 1em; */
   text-align: right;
 }
 
