--- a/src/components/Review.module.css
+++ b/src/components/Review.module.css
@@ -1,6 +1,12 @@
 .top {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  display: flex;
+  align-items: baseline;
 }
 
 .review {
@@ -8,6 +14,11 @@
   border-radius: 5px;
   padding: 1em 1em;
   margin: 1em 0 0;
+}
+
+.date {
+  font-size: 0.6em;
+  margin-left: 1em;
 }
 
 .author {
