--- a/src/components/ReviewStars.module.css
+++ b/src/components/ReviewStars.module.css
@@ -1,13 +1,3 @@
-/* @value review from "./Review.module.css"; */
-
-/* .stars {
-  padding: 0 1em 0 1em;
-} */
-
-/* .review .stars {
-  padding-right: 0;
-} */
-
 .star {
-  color: #e2b027;
+  color: #8a773f;
 }
