--- a/src/components/TradeTile.module.css
+++ b/src/components/TradeTile.module.css
@@ -2,9 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: grey;
-  border: 2px solid grey;
-  border-radius: 5px;
+  border: 1px solid #8c5d2e;
+  border-radius: 20px;
   padding: 0.2em;
   text-align: center;
 }
@@ -17,5 +16,5 @@
 }
 
 .selected {
-  border: 2px solid white;
+  background: #8c5d2e;
 }
