--- a/src/components/TradeTiles.module.css
+++ b/src/components/TradeTiles.module.css
@@ -1,6 +1,9 @@
 .tiles {
+  background: #393838;
+  border-radius: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
   gap: 0.7em;
   margin-bottom: 1.5em;
+  padding: 1em;
 }
