--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,10 @@ body {
 }
 
 :root {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
