--- a/src/components/PhoneNumber.module.css
+++ b/src/components/PhoneNumber.module.css
@@ -4,9 +4,9 @@
 
 .phoneIcon {
   color: #8c5d2e;
-  font-size: 1.3em;
+  font-size: 1.2em;
   display: inline;
-  margin-right: 0.5em;
+  margin-right: 11px;
 }
 
 .number {
