--- a/src/components/TradeTiles.module.css
+++ b/src/components/TradeTiles.module.css
@@ -8,3 +8,9 @@
   margin-bottom: 1em;
   padding: 1em;
 }
+
+@media screen and (min-width: 700px) {
+  .tiles {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+}
