--- a/src/components/CompanySummary.module.css
+++ b/src/components/CompanySummary.module.css
@@ -19,3 +19,9 @@
   flex-direction: column;
   min-width: 80px;
 }
+
+@media screen and (min-width: 700px) {
+  .name {
+    max-width: none;
+  }
+}
